--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         <div id="container-wrap">
             <main id="container">
                 <div id="profile">
-                    <p class="profile-title">
-                        welcome
-                    </p>
-                    <p class="profile-title">
-                        Thanks to visiting my website.
-                    </p>
+                    <div id="profile-p1">
+                        <p class="profile-title">
+                            welcome
+                        </p>
+                        <p class="profile-title">
+                            Thanks to visiting my website.
+                        </p>
+                    </div>
                     <p>
                         My name is Nyung soo Lee.</br>
                         I aiming to be a front-end developer.
