--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header id="header">
                 <div id="fixed-gnb">
                     <div id="gnb-L">
-                        <div class="home-logo">홈로고</div>
+                        <div class="home-logo">홈 로고</div>
                     </div>
                     <div id="gnb-R"> 
                         <div class="menu-index">
@@ -38,13 +38,17 @@
                             Thanks to visiting my website.
                         </p>
                     </div>
-                    <p>
-                        My name is Nyung soo Lee.</br>
-                        I aiming to be a front-end developer.
-                    </p>
-                    <p>
-                        I think it's important to create my own style, develop it, and stick to it. To that end, I am exposed to various ideas and learning new front-end tools.
-                    </p>
+                    <div id="profile-p2">
+                        <p>
+                            My name is Nyeong su Lee.</br>
+                            I aiming to be a front-end developer.
+                        </p>
+                    </div>
+                    <div id="profile-p3">
+                        <p>
+                            I think it's important to create my own style, develop it, and stick to it. To that end, I am exposed to various ideas and learning new front-end tools.
+                        </p>
+                    </div>
                 </div>
             </main>
         </div>
