20231007 main project part

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="container-wrap">
             <main id="container">
-                <div id="profile">
+                <section id="profile">
                     <div id="profile-p1">
                         <p class="profile-title">
                             welcome
@@ -45,7 +45,13 @@
                     <p>
                         I think it's important to create my own style, develop it, and stick to it. To that end, I am exposed to various ideas and learning new front-end tools.
                     </p>
-                </div>
+                </section>
+                <section id="project">
+                    <div class="project-row">
+                        <div class="project-react"></div>
+                        <div class="project-js"></div>
+                    </div>
+                </section>
             </main>
         </div>
         <div id="footer-wrap">
