--- a/index.html
+++ b/index.html
@@ -33,18 +33,22 @@
                     <div id="profile-p1">
                         <p class="profile-title">
                             welcome
-                        </p>
+                        </p>    
+                    </div>
+                    <div id="profile-p2">
                         <p class="profile-title">
                             Thanks to visiting my website.
                         </p>
                     </div>
-                    <p>
-                        My name is Nyeong su Lee.</br>
-                        I aiming to be a front-end developer.
-                    </p>
-                    <p>
-                        I think it's important to create my own style, develop it, and stick to it. To that end, I am exposed to various ideas and learning new front-end tools.
-                    </p>
+                    <div id="profile-p3">
+                        <p class="profile-title-2">
+                            My name is Nyeong su Lee.</br>
+                            I aiming to be a front-end developer.
+                        </p>
+                        <p class="profile-title-2">
+                            I think it's important to create my own style, develop it, and stick to it. To that end, I am exposed to various ideas and learning new front-end tools.
+                        </p>
+                    </div>
                 </section>
                 <section id="project">
                     <div class="project-row">
