--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제목</title>
+    <title>Porfolio</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -38,13 +38,14 @@
                             Thanks to visiting my website.
                         </p>
                     </div>
-                    <p>
+                    <div id="profile-p2">
                         My name is Nyeong su Lee.</br>
                         I aiming to be a front-end developer.
-                    </p>
-                    <p>
-                        I think it's important to create my own style, develop it, and stick to it. To that end, I am exposed to various ideas and learning new front-end tools.
-                    </p>
+                    </div>
+                    <br id="profile-p3">
+                        I think it's important to create my own style, develop it, and stick to it.</br>
+                        To that end, I am exposed to various ideas and learning new front-end tools.
+                    </div>
                 </section>
                 <section id="project">
                     <div class="project-row">
